--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button id="reset">Reset</button>
       <button id="increment">+</button>
     </div>
-    <h1>*hello Linux VM*</h1>
+    <h1>**hello Linux VM**</h1>
   </div>
 
   <script src="js/app.js"></script>
